# qtrader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/include/: liveseries.h  repositorydefinitions.h  serie.h  seriesrepository.h  sqldataprovider.h
core/include/analysis/: indicatorfactory.h  simplemovingaverage.h
core/include/simulation/: criteria.h  simulation.h  simulationresults.h  simulator.h
core/include/utils/: logger.h
core/src/: liveseries.cpp  serie.cpp  seriesrepository.cpp  sqldataprovider.cpp
core/src/analysis/: simplemovingaverage.cpp
core/src/simulation/: simulation.cpp  simulationresults.cpp  simulator.cpp
gui/: CMakeLists.txt
gui/include/: configtree.h  plotcontroller.h  serieplot.h  seriesplot.h  treemodel.h  treeview.h
gui/include/plotting/: configtree.h  plotcontroller.h  plottingwidget.h  seriesplot.h  treeitem.h  treeitemtype.h  treemodel.h  treeview.h
gui/include/simulation/: scatterchart.h  simulationwidget.h
gui/src/: configtree.cpp  plotcontroller.cpp  serieplot.cpp  seriesplot.cpp  treemodel.cpp
gui/src/plotting/: configtree.cpp  plotcontroller.cpp  plottingwidget.cpp  seriesplot.cpp  treeitem.cpp  treemodel.cpp
gui/src/simulation/: scatterchart.cpp  simulationwidget.cpp
gui/ui/: smaconfig.ui
scripts/: configEnv.sh  env.sh  libs.sh  tests.sh  utils.sh
scripts/database/: trading.sql
scripts/scrapers/: .crypto_scraper.py.swp  .env.template  crypto_scraper.py
test/: CMakeLists.txt  testDB.cpp  testSimulation.cpp
